# dlmm_indexing_explorer

./: Cargo.toml  Makefile  README.md  docker-compose.clickhouse.yml
backend/: .env.example  Cargo.toml
backend/src/: live.rs  main.rs  models.rs  rpc.rs
backend/src/handlers/: analytics.rs  export.rs  mod.rs  pools.rs  quality.rs  stream.rs  system.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/lib/: api.js  format.js
indexer/: .env.example  Cargo.toml
indexer/src/: main.rs  storage.rs
indexer/src/parser/: instruction_utils.rs  mod.rs  models.rs
indexer/src/storage/: live.rs  models.rs  writer.rs
indexer/src/storage/transform/: mod.rs  rows.rs
indexer/src/yellowstone/: client.rs  mod.rs  subscriptions.rs  tui.rs
schema/: clickhouse_v2.sql
scripts/: app.sh  db_reset.sh  demo.sh  dev.sh  schema_apply.sh  smoke.sh
