[package]
name = "dune-project-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
base64 = "0.22.1"
bs58 = "0.5.1"
dotenv = "0.15.0"
redis = { version = "1.0.3", features = ["streams"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.49.0", features = ["full"] }
